--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<h6>La hawla wala quata ellah billah</h6>
 
 	<p>Hi Iam abdur rahman sohas insha allah I'll be a successful freelancer very soon</p>
-	<a href="Pages/about.html">about us</a>
+	<a href="pages/about.html">about us</a>
 	<a href="https://web.facebook.com/profile.php?id=100004329571435"target="_blank">facebook</a>
 
 	<img src="images/photo.jpg" alt="deen">
